# image-generator

./: .env.example  .gitignore
backend/: config.py  database.py  image-generator.db  main.py  models.py  pyproject.toml  routes.py
backend/services/: generator.py  imagekit_service.py  openai_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/.react-router/types/: +routes.ts
frontend/.react-router/types/app/routes/+types/: job-detail.ts
frontend/app/: api.ts  routes.ts
frontend/app/routes/: home.tsx  job-detail.tsx
